<resources>
    <string name="app_name">EmargementNFC</string>

    <string name="readButton">Read</string>
    <string name="writeButton">Write</string>
    <string name="eraseButton">Erase</string>

    <string name="textButton">Text</string>
    <string name="appliButton">Application</string>
    <string name="urlButton">URL</string>

    <string name="title_activity_read">Read the TAG</string>
    <string name="title_activity_choice_write">Write on the TAG</string>
    <string name="title_activity_write_text">Write text</string>
    <string name="title_activity_write_app">Choose application</string>
    <string name="title_activity_write_url">Write URL</string>
    <string name="title_activity_erase">Erase the TAG</string>

    <string name="uri">http://www.</string>

    <string name="scan_your_tag">Scan your tag</string>

    <string name="about_title">About</string>

    <string name="about_action">About</string>
    <string name="about_close">Close</string>

    <string name="info_title">Information</string>

    <string name="info_cancel">Cancel</string>
    <string name="info_ok">OK</string>
    <string name="enregistrement">Ajouter un étudiant</string>
    <string name="emargement">Nouvel émargement</string>
    <string name="lastname">Nom</string>
    <string name="firstname">Prénom</string>
    <string name="select_promotion">Promotion :</string>
    <string name="etu_id">Numéro d\'étudiant</string>
    <string name="addnext">Ajouter un autre étudiant</string>
    <string name="add">Ajouter l\'étudiant</string>

</resources>
